examples/test/testpolicy17014.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17014
  namespace: namespace138
spec:
  podSelector:
    matchLabels:
      key48: value22
      key0: value45
      key18: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value2
          key14: value27
          key26: value15
      podSelector:
        matchLabels:
          key20: value29
          key4: value35
          key49: value5
